progress at add required content for hero

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="icons/boxicons/css/boxicons.min.css" />
         <link rel="stylesheet" href="css/venobox.min.css" />
         <link rel="stylesheet" href="icons/css/all.min.css" />
+        <link rel="stylesheet" href="css/swiper.min.css" />
         <link rel="stylesheet" href="css/style.css" />
         <title>Chatcloud - We Chat For You.</title>
     </head>
@@ -47,13 +48,58 @@
                                             >Auto DealerShip</a
                                         >
                                     </li>
-                                    <li><a href="" class="list-group-item">E-commerce</a></li>
-                                    <li><a href="" class="list-group-item">Education</a></li>
-                                    <li><a href="" class="list-group-item">Event Management</a></li>
-                                    <li><a href="" class="list-group-item">Health Care</a></li>
-                                    <li><a href="" class="list-group-item">Home Improvement</a></li>
-                                    <li><a href="" class="list-group-item">Law Firms</a></li>
-                                    <li><a href="" class="list-group-item">Real Estate</a></li>
+                                    <li>
+                                        <a href="" class="list-group-item">Auto DealerShip</a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="/pages/industries/Ecommerce.html"
+                                            class="list-group-item"
+                                            >E-commerce</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="/pages/industries/education.html"
+                                            class="list-group-item"
+                                            >Education</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="/pages/industries/event_management.html"
+                                            class="list-group-item"
+                                            >Event Management</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="/pages/industries/healthcare.html"
+                                            class="list-group-item"
+                                            >Health Care</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="/pages/industries/HomeImprovements.html"
+                                            class="list-group-item"
+                                            >Home Improvement</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="/pages/industries/LawFirms.html"
+                                            class="list-group-item"
+                                            >Law Firms</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="/pages/industries/RealEstate.html"
+                                            class="list-group-item"
+                                            >Real Estate</a
+                                        >
+                                    </li>
                                 </ul>
                             </div>
                         </li>
@@ -62,16 +108,17 @@
                     </ul>
                 </nav>
             </header>
-            <div class="hero_slider">
-                <div class="hero-slider-wrapper">
+            <div class="hero_slider swiper-container">
+                <div class="hero-slider-wrapper swiper-wrapper">
+                    <!-- slider1 -->
                     <div
-                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 active"
+                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
                     >
                         <div class="background">
                             <img src="img/education.jpg" alt="" />
                         </div>
                         <div class="content px-5">
-                            <h1 class="font-weight-bold">Education</h1>
+                            <h1 class="font-weight-bold">Side 1</h1>
                             <p>
                                 Engage and increase the conversion of New Students through the live
                                 chat, who want to enroll in your programs.
@@ -81,14 +128,87 @@
                             </button>
                         </div>
                     </div>
+                    <!-- slider2 -->
                     <div
-                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100"
+                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
                     >
                         <div class="background">
                             <img src="img/education.jpg" alt="" />
                         </div>
                         <div class="content px-5">
-                            <h1 class="font-weight-bold">Education</h1>
+                            <h1 class="font-weight-bold">Slide 2</h1>
+                            <p>
+                                Engage and increase the conversion of New Students through the live
+                                chat, who want to enroll in your programs.
+                            </p>
+                            <button class="slide px-3 py-2 text-uppercase rounded">
+                                <span class="text">talk to us now</span>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- slider3 -->
+                    <div
+                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
+                    >
+                        <div class="background">
+                            <img src="img/education.jpg" alt="" />
+                        </div>
+                        <div class="content px-5">
+                            <h1 class="font-weight-bold">Slide 3</h1>
+                            <p>
+                                Engage and increase the conversion of New Students through the live
+                                chat, who want to enroll in your programs.
+                            </p>
+                            <button class="slide px-3 py-2 text-uppercase rounded">
+                                <span class="text">talk to us now</span>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- slider4 -->
+                    <div
+                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
+                    >
+                        <div class="background">
+                            <img src="img/education.jpg" alt="" />
+                        </div>
+                        <div class="content px-5">
+                            <h1 class="font-weight-bold">Slide 4</h1>
+                            <p>
+                                Engage and increase the conversion of New Students through the live
+                                chat, who want to enroll in your programs.
+                            </p>
+                            <button class="slide px-3 py-2 text-uppercase rounded">
+                                <span class="text">talk to us now</span>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- slider5 -->
+                    <div
+                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
+                    >
+                        <div class="background">
+                            <img src="img/education.jpg" alt="" />
+                        </div>
+                        <div class="content px-5">
+                            <h1 class="font-weight-bold">Slide 5</h1>
+                            <p>
+                                Engage and increase the conversion of New Students through the live
+                                chat, who want to enroll in your programs.
+                            </p>
+                            <button class="slide px-3 py-2 text-uppercase rounded">
+                                <span class="text">talk to us now</span>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- slider6 -->
+                    <div
+                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
+                    >
+                        <div class="background">
+                            <img src="img/education.jpg" alt="" />
+                        </div>
+                        <div class="content px-5">
+                            <h1 class="font-weight-bold">Slide 6</h1>
                             <p>
                                 Engage and increase the conversion of New Students through the live
                                 chat, who want to enroll in your programs.
@@ -462,6 +582,7 @@
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/venobox.min.js"></script>
+        <script src="js/swiper.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
