Progress at finished hero section

--- a/index.html
+++ b/index.html
@@ -115,14 +115,17 @@
                         class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
                     >
                         <div class="background">
-                            <img src="img/education.jpg" alt="" />
+                            <video autoplay loop muted id="hero_vid">
+                                <source
+                                    src="img/hero_images/mixkit-texting-while-riding-a-train-21834-medium-1.webm"
+                                    type="video/webm"
+                                />
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                         <div class="content px-5">
-                            <h1 class="font-weight-bold">Side 1</h1>
-                            <p>
-                                Engage and increase the conversion of New Students through the live
-                                chat, who want to enroll in your programs.
-                            </p>
+                            <h1 class="font-weight-bold">24/7 Live Chat Services</h1>
+                            <p>Increase your sales and engage your visitors via Live Chat.</p>
                             <button class="slide px-3 py-2 text-uppercase rounded">
                                 <span class="text">talk to us now</span>
                             </button>
@@ -133,13 +136,14 @@
                         class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
                     >
                         <div class="background">
-                            <img src="img/education.jpg" alt="" />
+                            <img src="img/hero_images/law_firms.jpg" alt="" />
                         </div>
                         <div class="content px-5">
-                            <h1 class="font-weight-bold">Slide 2</h1>
+                            <h1 class="font-weight-bold">Law Firms</h1>
                             <p>
-                                Engage and increase the conversion of New Students through the live
-                                chat, who want to enroll in your programs.
+                                Don't miss leads of your website visitors. Every potential client
+                                with a case, visits to your website first with many questions that
+                                need to be instantly answered via Live Chat.
                             </p>
                             <button class="slide px-3 py-2 text-uppercase rounded">
                                 <span class="text">talk to us now</span>
@@ -151,13 +155,14 @@
                         class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
                     >
                         <div class="background">
-                            <img src="img/education.jpg" alt="" />
+                            <img src="img/hero_images/health_care.jpg" alt="" />
                         </div>
                         <div class="content px-5">
-                            <h1 class="font-weight-bold">Slide 3</h1>
+                            <h1 class="font-weight-bold">Health Care</h1>
                             <p>
-                                Engage and increase the conversion of New Students through the live
-                                chat, who want to enroll in your programs.
+                                Live Chat helps you get 40% more conversion of new patients. You may
+                                not be available to capture contact details of your new patients but
+                                we got you covered 24/7.
                             </p>
                             <button class="slide px-3 py-2 text-uppercase rounded">
                                 <span class="text">talk to us now</span>
@@ -169,13 +174,14 @@
                         class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
                     >
                         <div class="background">
-                            <img src="img/education.jpg" alt="" />
+                            <img src="img/hero_images/Home-Improvements.jpg" alt="" />
                         </div>
                         <div class="content px-5">
-                            <h1 class="font-weight-bold">Slide 4</h1>
+                            <h1 class="font-weight-bold">Home Improvement</h1>
                             <p>
-                                Engage and increase the conversion of New Students through the live
-                                chat, who want to enroll in your programs.
+                                Many of your customers want instant estimate for the services they
+                                are looking for. Get connected with your website visitors using our
+                                call connect feature.
                             </p>
                             <button class="slide px-3 py-2 text-uppercase rounded">
                                 <span class="text">talk to us now</span>
@@ -190,25 +196,7 @@
                             <img src="img/education.jpg" alt="" />
                         </div>
                         <div class="content px-5">
-                            <h1 class="font-weight-bold">Slide 5</h1>
-                            <p>
-                                Engage and increase the conversion of New Students through the live
-                                chat, who want to enroll in your programs.
-                            </p>
-                            <button class="slide px-3 py-2 text-uppercase rounded">
-                                <span class="text">talk to us now</span>
-                            </button>
-                        </div>
-                    </div>
-                    <!-- slider6 -->
-                    <div
-                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 swiper-slide"
-                    >
-                        <div class="background">
-                            <img src="img/education.jpg" alt="" />
-                        </div>
-                        <div class="content px-5">
-                            <h1 class="font-weight-bold">Slide 6</h1>
+                            <h1 class="font-weight-bold">Education</h1>
                             <p>
                                 Engage and increase the conversion of New Students through the live
                                 chat, who want to enroll in your programs.
